# ollama-agents-mcp

./: .gitignore  README.md  REVISION_HISTORY.md  bootstrap.sh  pyproject.toml  run_server.py
src/ollama_agents_mcp/: __init__.py  server.py
