[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-agents-mcp"
version = "0.1.0"
description = "MCP server to scaffold local Ollama sub-agent environments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
